# rdf2geojson

./: .gitignore  LICENSE  README.adoc  Taskfile.yml  pyproject.toml
rdf2geojson/: convert.py
rdf2geojson/contrib/: __init__.py
rdf2geojson/contrib/geomet/: __init__.py  _exception.py  esri.py  geopackage.py  util.py  wkb.py  wkt.py
tests/: test_convert.py
tests/data/: test_01.json  test_01.roundtrip.ttl  test_01.ttl  test_01b_crs.ttl  test_01c_srid.json  test_01c_srid.roundtrip.ttl  test_01c_srid.ttl  test_01d_gda94.json  test_01d_gda94.roundtrip.ttl  test_01d_gda94.ttl  test_02_invalid.ttl  test_04_nogeo.ttl  test_05_onefeature.json  test_05_onefeature.roundtrip.ttl  test_05_onefeature.ttl  test_06_sdo.ttl
