[tool.poetry]
name = "rdf2geojson"
version = "0.1.0"
description = "A Python package that converts any RDF to GeoJSON"
authors = ["Nicholas Car <nick@kurrawong.ai>"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{include = "rdf2geojson"}]

[tool.poetry.dependencies]
python = "^3.11"
pyshacl = "^0.26.0"
geojson = "^3.1.0"
shapely = "^2.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
